[project]
name = "vidtoolz-trim"
version = "0.1.2"
description = "Trim video using ffmpeg"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-trim"
Changelog = "https://github.com/sukhbinder/vidtoolz-trim/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-trim/issues"
CI = "https://github.com/sukhbinder/vidtoolz-trim/actions"

[project.entry-points."vidtoolz_plugins"]
trim = "vidtoolz_trim:trim_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
